--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.1.6",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "react": "^18",
